--- a/server/package.json
+++ b/server/package.json
@@ -12,15 +12,22 @@
     "apollo-server-express": "^1.3.4",
     "babel-polyfill": "^6.26.0",
     "body-parser": "^1.18.2",
+    "colors": "^1.2.1",
     "express": "^4.16.3",
     "graphql": "^0.13.2",
     "graphql-tools": "^2.23.1",
+    "isomorphic-fetch": "^2.2.1",
+    "js-yaml": "^3.11.0",
+    "knex": "^0.14.4",
     "md5": "^2.2.1",
     "moment": "^2.22.0",
     "ramda": "^0.25.0",
     "rxjs": "^5.5.8",
     "sqlite3": "^4.0.0",
-    "xml2js": "^0.4.19"
+    "winston": "^3.0.0-rc4",
+    "xml-parser": "^1.2.1",
+    "xml2js": "^0.4.19",
+    "xml2json": "^0.11.2"
   },
   "devDependencies": {
     "@types/express": "^4.11.1",
