--- a/client/package.json
+++ b/client/package.json
@@ -28,8 +28,10 @@
     "apollo-cache-inmemory": "^1.1.12",
     "apollo-client": "^2.2.8",
     "core-js": "^2.4.1",
+    "date-fns": "^2.0.0-alpha.7",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.8.0",
+    "ngx-infinite-scroll": "^0.8.3",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
