--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc"
   },
   "author": "",
   "license": "ISC",
@@ -25,8 +26,6 @@
     "rxjs": "^5.5.8",
     "sqlite3": "^4.0.0",
     "winston": "^3.0.0-rc4",
-    "xml-parser": "^1.2.1",
-    "xml2js": "^0.4.19",
     "xml2json": "^0.11.2"
   },
   "devDependencies": {
