--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "ramda": "^0.25.0",
     "rxjs": "^5.5.8",
     "sqlite3": "^4.0.0",
+    "web-push": "^3.3.0",
     "winston": "^3.0.0-rc4",
     "xml2json": "^0.11.2"
   },
