--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "@angular/service-worker": "^5.2.10",
     "apollo-angular": "^1.0.1",
     "apollo-angular-link-http": "^1.0.2",
     "apollo-cache-inmemory": "^1.1.12",
