--- a/server/package.json
+++ b/server/package.json
@@ -19,9 +19,11 @@
     "graphql-tools": "^2.23.1",
     "isomorphic-fetch": "^2.2.1",
     "js-yaml": "^3.11.0",
+    "jsonwebtoken": "^8.2.1",
     "knex": "^0.14.4",
     "md5": "^2.2.1",
     "moment": "^2.22.0",
+    "morgan": "^1.9.0",
     "ramda": "^0.25.0",
     "rxjs": "^5.5.8",
     "sqlite3": "^4.0.0",
