--- a/server/package.json
+++ b/server/package.json
@@ -10,11 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/moment": "^2.13.0",
+    "@types/moment-timezone": "^0.5.4",
     "apollo-server-express": "^1.3.4",
     "babel-polyfill": "^6.26.0",
     "body-parser": "^1.18.2",
     "colors": "^1.2.1",
     "express": "^4.16.3",
+    "express-useragent": "^1.0.12",
     "graphql": "^0.13.2",
     "graphql-tools": "^2.23.1",
     "isomorphic-fetch": "^2.2.1",
@@ -22,7 +25,8 @@
     "jsonwebtoken": "^8.2.1",
     "knex": "^0.14.4",
     "md5": "^2.2.1",
-    "moment": "^2.22.0",
+    "moment": "^2.22.1",
+    "moment-timezone": "^0.5.16",
     "morgan": "^1.9.0",
     "ramda": "^0.25.0",
     "rxjs": "^5.5.8",
