--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "express-useragent": "^1.0.12",
     "graphql": "^0.13.2",
     "graphql-tools": "^2.23.1",
+    "html-to-text": "^4.0.0",
     "isomorphic-fetch": "^2.2.1",
     "js-yaml": "^3.11.0",
     "jsonwebtoken": "^8.2.1",
