--- a/client/nginx/default.conf
+++ b/client/nginx/default.conf
@@ -1,24 +1,48 @@
+upstream backend_upstream {
+    server backend:7788;
+    keepalive 64;
+}
+
 server {
-    listen 80;
+    listen 80 default_server;
+    listen [::]:80;
+    return 301 https://$server_name$request_uri;
+}
 
-    sendfile on;
-
-    default_type application/octet-stream;
-
-    gzip on;
-    gzip_http_version 1.1;
-    gzip_disable      "MSIE [1-6]\.";
-    gzip_min_length   256;
-    gzip_vary         on;
-    gzip_proxied      expired no-cache no-store private auth;
-    gzip_types        text/plain text/css application/json application/javascript application/x-javascript text/xml application/xml application/xml+rss text/javascript;
-    gzip_comp_level   9;
-
-
+server {
+    listen 443 ssl default_server;
     root /usr/share/nginx/html;
+    index index.html index.htm;
 
+    ssl_certificate /etc/letsencrypt/live/default/cert.pem;
+    ssl_certificate_key /etc/letsencrypt/live/default/privkey.pem;
+
+    location ~* \.(?:css|js)$ {
+        expires 72h;
+        access_log off;
+        add_header Cache-Control "public";
+    }
+
+    location ~* \.(?:png|jpg|svg|woff2)$ {
+        expires 1M;
+        access_log off;
+        add_header Cache-Control "public";
+    }
 
     location / {
         try_files $uri $uri/ /index.html =404;
+    }
+
+    location /api {
+        proxy_redirect off;
+        proxy_set_header   X-Real-IP            $remote_addr;
+        proxy_set_header   X-Forwarded-For  $proxy_add_x_forwarded_for;
+        proxy_set_header   X-Forwarded-Proto $scheme;
+        proxy_set_header   Host                   $http_host;
+        proxy_set_header   X-NginX-Proxy    true;
+        proxy_set_header   Connection "";
+        proxy_http_version 1.1;
+        proxy_cache_key sfs$request_uri$scheme;
+        proxy_pass         http://backend_upstream/api;
     }
 }
