fix docker compose volume path

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,8 +14,8 @@ services:
     restart: "no"
     build: ./server/
     volumes:
-      - db:/app/db
-      - feeds.yml:/app/feeds.yml
+      - ./db:/app/db
+      - ./feeds.yml:/app/feeds.yml
     command: >
       sh -c "node built/main.js"
   
