--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -4,7 +4,7 @@
     "baseUrl": "./",
     "allowJs": true,
     "target": "es5",
-    "lib": ["es2015", "es2017", "dom"], // dom lib for rxjs dom and ajx error
+    "lib": ["es2015", "es2017", "dom", "esnext.asynciterable"],
     "sourceMap": true,
     "moduleResolution": "node",
     "experimentalDecorators": true
