--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -115,6 +115,8 @@ RUN npm set progress=false && npm config set depth 0 && npm cache clean --force
 
 RUN npm i && mkdir /app && cp -R ./node_modules ./app
 
+RUN mkdir /db
+
 WORKDIR /app
 
 COPY . .
