compose add volumes log

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,5 +16,6 @@ services:
     volumes:
       - ./db:/db
       - ./config:/config
+      - ./log:/log
     command: >
       sh -c "node built/main.js"
