server docker image mkdir /log

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -116,6 +116,7 @@ RUN npm set progress=false && npm config set depth 0 && npm cache clean --force
 RUN npm i && mkdir /app && cp -R ./node_modules ./app
 
 RUN mkdir /db
+RUN mkdir /log
 
 WORKDIR /app
 
