--- a/client/package.json
+++ b/client/package.json
@@ -24,24 +24,26 @@
     "@angular/platform-browser-dynamic": "6.0.6",
     "@angular/router": "6.0.6",
     "@angular/service-worker": "6.0.6",
-    "apollo-angular": "^1.0.1",
-    "apollo-angular-link-http": "^1.0.2",
-    "apollo-cache-inmemory": "^1.1.12",
-    "apollo-client": "^2.2.8",
+    "apollo-angular": "^1.1.2",
+    "apollo-angular-link-http": "^1.1.1",
+    "apollo-cache-inmemory": "^1.3.0-beta.3",
+    "apollo-client": "^2.3.5",
     "core-js": "^2.4.1",
     "date-fns": "^2.0.0-alpha.7",
-    "graphql": "^0.13.2",
-    "graphql-tag": "^2.8.0",
+    "graphql": "^14.0.0-rc.2",
+    "graphql-tag": "^2.9.2",
     "ngx-infinite-scroll": "^0.8.3",
     "rxjs": "^6.2.1",
+    "rxjs-compat": "^6.2.1",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "~0.6.8",
     "@angular/cli": "6.0.8",
     "@angular/compiler-cli": "6.0.6",
     "@angular/language-service": "6.0.6",
+    "@types/graphql": "^0.13.1",
     "@types/jasmine": "~2.8.3",
-    "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
     "codelyzer": "^4.0.1",
     "jasmine-core": "~2.8.0",
