--- a/client/package.json
+++ b/client/package.json
@@ -27,7 +27,7 @@
     "apollo-angular": "^1.1.2",
     "apollo-angular-link-http": "^1.1.1",
     "apollo-cache-inmemory": "^1.3.0-beta.3",
-    "apollo-client": "^2.3.5",
+    "apollo-client": "^2.3.4",
     "core-js": "^2.4.1",
     "date-fns": "^2.0.0-alpha.7",
     "graphql": "^14.0.0-rc.2",
@@ -44,7 +44,7 @@
     "@angular/language-service": "6.0.6",
     "@types/graphql": "^0.13.1",
     "@types/jasmine": "~2.8.3",
-    "@types/node": "~6.0.60",
+    "@types/node": "^10.3.5",
     "codelyzer": "^4.0.1",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
