--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -7,6 +7,7 @@
     "lib": ["es2015", "es2017", "dom", "esnext.asynciterable"],
     "sourceMap": true,
     "moduleResolution": "node",
+    "emitDecoratorMetadata": true,
     "experimentalDecorators": true
   },
   "include": ["./src/**/*"],
