--- a/server/package.json
+++ b/server/package.json
@@ -14,8 +14,10 @@
     "@types/moment-timezone": "^0.5.4",
     "apollo-server-express": "^1.3.4",
     "babel-polyfill": "^6.26.0",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
     "colors": "^1.2.1",
+    "es6-promise": "^4.2.5",
     "express": "^4.16.3",
     "express-useragent": "^1.0.12",
     "graphql": "^0.13.2",
@@ -31,7 +33,7 @@
     "morgan": "^1.9.0",
     "ramda": "^0.25.0",
     "rxjs": "^5.5.8",
-    "sqlite3": "^4.0.0",
+    "sqlite3": "^4.0.4",
     "web-push": "^3.3.0",
     "winston": "^3.0.0-rc4",
     "xml2json": "^0.11.2"
