--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc"
+    "build": "tsc",
+    "start": "ts-node src/main.ts"
   },
   "author": "",
   "license": "ISC",
@@ -32,8 +33,10 @@
     "moment-timezone": "^0.5.16",
     "morgan": "^1.9.0",
     "ramda": "^0.25.0",
+    "reflect-metadata": "^0.1.12",
     "rxjs": "^5.5.8",
     "sqlite3": "^4.0.4",
+    "typeorm": "^0.2.9",
     "web-push": "^3.3.0",
     "winston": "^3.0.0-rc4",
     "xml2json": "^0.11.2"
@@ -41,13 +44,14 @@
   "devDependencies": {
     "@types/express": "^4.11.1",
     "@types/knex": "^0.14.9",
-    "@types/node": "^9.3.0",
+    "@types/node": "^9.6.39",
     "@types/rx": "^4.1.1",
     "@types/ws": "^4.0.0",
+    "ts-node": "^6.2.0",
     "tslint": "^5.9.1",
     "tslint-config-prettier": "^1.6.0",
     "tslint-plugin-prettier": "^1.3.0",
-    "typescript": "^2.6.2",
+    "typescript": "^2.9.2",
     "yarn": "^1.3.2"
   }
 }
