--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "apollo-server-express": "^1.3.4",
     "babel-polyfill": "^6.26.0",
     "bcryptjs": "^2.4.3",
+    "bloom-redis": "0.0.1",
     "body-parser": "^1.18.2",
     "colors": "^1.2.1",
     "es6-promise": "^4.2.5",
@@ -33,6 +34,7 @@
     "moment-timezone": "^0.5.16",
     "morgan": "^1.9.0",
     "ramda": "^0.25.0",
+    "redis": "^2.8.0",
     "reflect-metadata": "^0.1.12",
     "rxjs": "^5.5.8",
     "sqlite3": "^4.0.4",
