--- a/server/package.json
+++ b/server/package.json
@@ -47,6 +47,7 @@
     "@types/express": "^4.11.1",
     "@types/knex": "^0.14.9",
     "@types/node": "^9.6.40",
+    "@types/redis": "^2.8.8",
     "@types/rx": "^4.1.1",
     "@types/ws": "^4.0.0",
     "ts-node": "^6.2.0",
