--- a/server/package.json
+++ b/server/package.json
@@ -32,6 +32,7 @@
     "moment": "^2.22.1",
     "moment-timezone": "^0.5.16",
     "morgan": "^1.9.0",
+    "mysql": "^2.16.0",
     "ramda": "^0.25.0",
     "redis": "^2.8.0",
     "reflect-metadata": "^0.1.12",
