change to postgres

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -3,5 +3,5 @@ JWT_EXP: 2592000 # 30d
 FEED_FILE_PATH: 'config/feeds.yml'
 
 # redis
-REDIS_HOST: localhost
+REDIS_HOST: "localhost"
 REDIS_PORT: 6379
