--- a/server/ormconfig.json
+++ b/server/ormconfig.json
@@ -1,8 +1,12 @@
 {
-  "type": "sqlite",
-  "database": "../db/db.sqlite3",
+  "insecureAuth": true,
+  "type": "postgres",
   "synchronize": true,
-  "logging": false,
+  "logging": true,
+  "host": "localhost",
+  "username": "postgres",
+  "password": "mysecretpassword",
+  "database": "postgres",
   "entities": ["src/entity/**/*.ts"],
   "migrations": ["src/migration/**/*.ts"],
   "subscribers": ["src/subscriber/**/*.ts"],
