--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,11 @@
     "@angular/platform-browser-dynamic": "6.0.6",
     "@angular/router": "6.0.6",
     "@angular/service-worker": "6.0.6",
+    "@fortawesome/angular-fontawesome": "^0.3.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.12",
+    "@fortawesome/free-regular-svg-icons": "^5.6.3",
+    "@fortawesome/free-solid-svg-icons": "^5.6.3",
+    "add": "^2.0.6",
     "apollo-angular": "^1.1.2",
     "apollo-angular-link-http": "^1.1.1",
     "apollo-cache-inmemory": "^1.3.0-beta.3",
@@ -35,6 +40,7 @@
     "ngx-infinite-scroll": "^0.8.3",
     "rxjs": "^6.2.1",
     "rxjs-compat": "^6.2.1",
+    "yarn": "^1.12.3",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
