--- a/client/package.json
+++ b/client/package.json
@@ -44,7 +44,7 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.6.8",
+    "@angular-devkit/build-angular": "^0.11.4",
     "@angular/cli": "6.0.8",
     "@angular/compiler-cli": "6.0.6",
     "@angular/language-service": "6.0.6",
@@ -59,7 +59,7 @@
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.1.2",
+    "protractor": "^5.4.2",
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
     "typescript": "2.7.2"
