--- a/client/package.json
+++ b/client/package.json
@@ -12,18 +12,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "6.0.6",
+    "@angular/animations": "7.1.4",
     "@angular/cdk": "^6.3.0",
-    "@angular/common": "6.0.6",
-    "@angular/compiler": "6.0.6",
-    "@angular/core": "6.0.6",
-    "@angular/forms": "6.0.6",
-    "@angular/http": "6.0.6",
+    "@angular/common": "7.1.4",
+    "@angular/compiler": "7.1.4",
+    "@angular/core": "7.1.4",
+    "@angular/forms": "7.1.4",
+    "@angular/http": "7.1.4",
     "@angular/material": "^6.3.0",
-    "@angular/platform-browser": "6.0.6",
-    "@angular/platform-browser-dynamic": "6.0.6",
-    "@angular/router": "6.0.6",
-    "@angular/service-worker": "6.0.6",
+    "@angular/platform-browser": "7.1.4",
+    "@angular/platform-browser-dynamic": "7.1.4",
+    "@angular/router": "7.1.4",
+    "@angular/service-worker": "7.1.4",
     "@fortawesome/angular-fontawesome": "^0.3.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.12",
     "@fortawesome/free-regular-svg-icons": "^5.6.3",
@@ -37,17 +37,16 @@
     "date-fns": "^2.0.0-alpha.7",
     "graphql": "^14.0.0-rc.2",
     "graphql-tag": "^2.9.2",
-    "ngx-infinite-scroll": "^0.8.3",
-    "rxjs": "^6.2.1",
-    "rxjs-compat": "^6.2.1",
+    "ngx-infinite-scroll": "^7.0.0",
+    "rxjs": "^6.3.3",
     "yarn": "^1.12.3",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.11.4",
-    "@angular/cli": "6.0.8",
-    "@angular/compiler-cli": "6.0.6",
-    "@angular/language-service": "6.0.6",
+    "@angular/cli": "^7.1.4",
+    "@angular/compiler-cli": "7.1.4",
+    "@angular/language-service": "7.1.4",
     "@types/graphql": "^0.13.1",
     "@types/jasmine": "~2.8.3",
     "@types/node": "^10.3.5",
@@ -62,6 +61,6 @@
     "protractor": "^5.4.2",
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
-    "typescript": "2.7.2"
+    "typescript": "3.1.6"
   }
 }
