--- a/client/ngsw-config.json
+++ b/client/ngsw-config.json
@@ -6,9 +6,7 @@
     "resources": {
       "files": [
         "/favicon.ico",
-        "/index.html"
-      ],
-      "files": [
+        "/index.html",
         "/*.bundle.css",
         "/*.bundle.js",
         "/*.chunk.js"
