--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc",
+    "test": "jest",
     "start": "ts-node src/main.ts"
   },
   "author": "",
@@ -45,10 +44,13 @@
   },
   "devDependencies": {
     "@types/express": "^4.11.1",
+    "@types/jest": "^23.3.11",
     "@types/knex": "^0.14.9",
     "@types/node": "^9.6.40",
     "@types/redis": "^2.8.8",
     "@types/ws": "^4.0.0",
+    "jest": "^23.6.0",
+    "ts-jest": "^23.10.5",
     "ts-node": "^6.2.0",
     "tslint": "^5.9.1",
     "tslint-config-prettier": "^1.6.0",
