--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,8 @@
     "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "prettier": "prettier src/**/*.ts --write"
   },
   "private": true,
   "dependencies": {
