add url for each feed

--- a/client/.prettierrc
+++ b/client/.prettierrc
@@ -9,6 +9,12 @@
       }
     },
     {
+      "files": ["**/*.html"],
+      "options": {
+        "parser": "angular"
+      }
+    },
+    {
       "files": "**/*.scss",
       "options": {
         "parser": "css"
