--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.12",
     "@fortawesome/free-regular-svg-icons": "^5.6.3",
     "@fortawesome/free-solid-svg-icons": "^5.6.3",
+    "@ngrx/effects": "^7.1.0",
     "@ngrx/store": "^7.0.0",
     "add": "^2.0.6",
     "apollo-angular": "^1.1.2",
