--- a/client/angular.json
+++ b/client/angular.json
@@ -23,7 +23,7 @@
             ],
             "styles": [
               "src/styles.css",
-              "node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css"
+              "src/theme.scss"
             ],
             "scripts": []
           },
