--- a/client/package.json
+++ b/client/package.json
@@ -42,6 +42,7 @@
     "graphql-tag": "^2.9.2",
     "ngx-infinite-scroll": "^7.0.0",
     "rxjs": "^6.3.3",
+    "text-overflow-clamp": "^1.0.0",
     "yarn": "^1.12.3",
     "zone.js": "^0.8.26"
   },
@@ -56,7 +57,7 @@
     "codelyzer": "^4.0.1",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^3.1.4",
+    "karma": "^4.0.1",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
