adjust docker file

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,14 +1,16 @@
 FROM node:9.11.1-alpine as builder
 
-COPY package.json package-lock.json ./
+# COPY package.json package-lock.json ./
 
-RUN npm set progress=false && npm config set depth 0 && npm cache clean --force
+# RUN npm set progress=false && npm config set depth 0 && npm cache clean --force
 
-RUN npm i && mkdir /ng-app && cp -R ./node_modules ./ng-app
+# RUN npm i && mkdir /ng-app && cp -R ./node_modules ./ng-app
 
 WORKDIR /ng-app
 
 COPY . .
+
+RUN npm i && npm config set depth 0 && npm cache clean --force
 
 RUN npm run build
 
