--- a/client/package.json
+++ b/client/package.json
@@ -14,55 +14,55 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "7.1.4",
-    "@angular/cdk": "^6.3.0",
+    "@angular/cdk": "^6.4.7",
     "@angular/common": "7.1.4",
     "@angular/compiler": "7.1.4",
     "@angular/core": "7.1.4",
     "@angular/forms": "7.1.4",
     "@angular/http": "7.1.4",
-    "@angular/material": "^6.3.0",
+    "@angular/material": "^6.4.7",
     "@angular/platform-browser": "7.1.4",
     "@angular/platform-browser-dynamic": "7.1.4",
     "@angular/router": "7.1.4",
     "@angular/service-worker": "7.1.4",
     "@fortawesome/angular-fontawesome": "^0.3.0",
-    "@fortawesome/fontawesome-svg-core": "^1.2.12",
-    "@fortawesome/free-regular-svg-icons": "^5.6.3",
-    "@fortawesome/free-solid-svg-icons": "^5.6.3",
-    "@ngrx/effects": "^7.1.0",
-    "@ngrx/store": "^7.0.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.15",
+    "@fortawesome/free-regular-svg-icons": "^5.7.2",
+    "@fortawesome/free-solid-svg-icons": "^5.7.2",
+    "@ngrx/effects": "^7.3.0",
+    "@ngrx/store": "^7.3.0",
     "add": "^2.0.6",
-    "apollo-angular": "^1.1.2",
-    "apollo-angular-link-http": "^1.1.1",
-    "apollo-cache-inmemory": "^1.3.0-beta.3",
-    "apollo-client": "^2.3.4",
-    "core-js": "^2.4.1",
-    "date-fns": "^2.0.0-alpha.7",
-    "graphql": "^14.0.0-rc.2",
-    "graphql-tag": "^2.9.2",
-    "ngx-infinite-scroll": "^7.0.0",
-    "rxjs": "^6.3.3",
+    "apollo-angular": "^1.5.0",
+    "apollo-angular-link-http": "^1.5.0",
+    "apollo-cache-inmemory": "^1.5.1",
+    "apollo-client": "^2.5.1",
+    "core-js": "^2.6.5",
+    "date-fns": "^2.0.0-alpha.27",
+    "graphql": "^14.1.1",
+    "graphql-tag": "^2.10.1",
+    "ngx-infinite-scroll": "^7.0.1",
+    "rxjs": "^6.4.0",
     "text-overflow-clamp": "^1.0.0",
-    "yarn": "^1.12.3",
-    "zone.js": "^0.8.26"
+    "yarn": "^1.13.0",
+    "zone.js": "^0.8.29"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.13.4",
-    "@angular/cli": "^7.1.4",
+    "@angular/cli": "^7.3.4",
     "@angular/compiler-cli": "^7.2.7",
     "@angular/language-service": "7.1.4",
-    "@types/graphql": "^0.13.1",
-    "@types/jasmine": "~2.8.3",
-    "@types/node": "^10.3.5",
-    "codelyzer": "^4.0.1",
+    "@types/graphql": "^0.13.4",
+    "@types/jasmine": "^2.8.16",
+    "@types/node": "^10.12.29",
+    "codelyzer": "^4.5.0",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "^4.0.1",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine": "~1.1.0",
+    "karma-coverage-istanbul-reporter": "^1.4.3",
+    "karma-jasmine": "^1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "prettier": "^1.16.0",
+    "prettier": "^1.16.4",
     "protractor": "^5.4.2",
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
