--- a/client/package.json
+++ b/client/package.json
@@ -62,6 +62,7 @@
     "karma-coverage-istanbul-reporter": "^1.4.3",
     "karma-jasmine": "^1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "node-sass": "^4.11.0",
     "prettier": "^1.16.4",
     "protractor": "^5.4.2",
     "ts-node": "~4.1.0",
