--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -28,7 +28,7 @@ services:
       - backend:backend
   backend:
     restart: always
-    image: fwchen/oyster-server:latest
+    image: fwchen/oyster-server:1.0.1
     networks: 
       - app
     environment:
