--- a/server/package.json
+++ b/server/package.json
@@ -40,7 +40,7 @@
     "typeorm": "^0.2.9",
     "web-push": "^3.3.0",
     "winston": "^3.2.1",
-    "xml2json": "^0.11.2"
+    "xml2js": "^0.4.22"
   },
   "devDependencies": {
     "@types/express": "^4.11.1",
