--- a/client/package.json
+++ b/client/package.json
@@ -14,13 +14,13 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "7.1.4",
-    "@angular/cdk": "^6.4.7",
+    "@angular/cdk": "8.2.3",
     "@angular/common": "7.1.4",
     "@angular/compiler": "7.1.4",
-    "@angular/core": "7.1.4",
+    "@angular/core": "8.2.14",
     "@angular/forms": "7.1.4",
     "@angular/http": "7.1.4",
-    "@angular/material": "^6.4.7",
+    "@angular/material": "8.2.3",
     "@angular/platform-browser": "7.1.4",
     "@angular/platform-browser-dynamic": "7.1.4",
     "@angular/router": "7.1.4",
@@ -30,10 +30,10 @@
     "@fortawesome/free-regular-svg-icons": "^5.7.2",
     "@fortawesome/free-solid-svg-icons": "^5.7.2",
     "@ngrx/effects": "^7.3.0",
-    "@ngrx/store": "^7.3.0",
+    "@ngrx/store": "8.6.0",
     "add": "^2.0.6",
-    "apollo-angular": "^1.5.0",
-    "apollo-angular-link-http": "^1.5.0",
+    "apollo-angular": "^1.8.0",
+    "apollo-angular-link-http": "^1.9.0",
     "apollo-cache-inmemory": "^1.5.1",
     "apollo-client": "^2.5.1",
     "core-js": "^2.6.5",
@@ -41,20 +41,19 @@
     "graphql": "^14.1.1",
     "graphql-tag": "^2.10.1",
     "ngx-infinite-scroll": "^7.0.1",
-    "rxjs": "^6.4.0",
+    "rxjs": "6.5.4",
     "text-overflow-clamp": "^1.0.0",
     "yarn": "^1.13.0",
-    "zone.js": "^0.8.29"
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.803.22",
-    "@angular/cli": "^7.3.9",
+    "@angular/cli": "8.3.22",
     "@angular/compiler-cli": "^7.2.7",
     "@angular/language-service": "7.1.4",
     "@types/graphql": "^0.13.4",
     "@types/jasmine": "^2.8.16",
     "@types/node": "^10.12.29",
-    "codelyzer": "^4.5.0",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "^4.0.1",
@@ -63,9 +62,6 @@
     "karma-jasmine": "^1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
     "prettier": "^1.16.4",
-    "protractor": "^5.4.2",
-    "ts-node": "~4.1.0",
-    "tslint": "~5.9.1",
-    "typescript": "3.1.6"
+    "typescript": "3.5.3"
   }
 }
