--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
+    "incremental": true,
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
     "declaration": false,
