--- a/client/package.json
+++ b/client/package.json
@@ -13,55 +13,55 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "7.1.4",
+    "@angular/animations": "8.2.14",
     "@angular/cdk": "8.2.3",
-    "@angular/common": "7.1.4",
-    "@angular/compiler": "7.1.4",
+    "@angular/common": "8.2.14",
+    "@angular/compiler": "8.2.14",
     "@angular/core": "8.2.14",
-    "@angular/forms": "7.1.4",
-    "@angular/http": "7.1.4",
+    "@angular/forms": "8.2.14",
+    "@angular/http": "7.2.16",
     "@angular/material": "8.2.3",
-    "@angular/platform-browser": "7.1.4",
-    "@angular/platform-browser-dynamic": "7.1.4",
-    "@angular/router": "7.1.4",
-    "@angular/service-worker": "7.1.4",
-    "@fortawesome/angular-fontawesome": "^0.3.0",
-    "@fortawesome/fontawesome-svg-core": "^1.2.15",
-    "@fortawesome/free-regular-svg-icons": "^5.7.2",
-    "@fortawesome/free-solid-svg-icons": "^5.7.2",
-    "@ngrx/effects": "^7.3.0",
+    "@angular/platform-browser": "8.2.14",
+    "@angular/platform-browser-dynamic": "8.2.14",
+    "@angular/router": "8.2.14",
+    "@angular/service-worker": "8.2.14",
+    "@fortawesome/angular-fontawesome": "^0.5.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.26",
+    "@fortawesome/free-regular-svg-icons": "^5.12.0",
+    "@fortawesome/free-solid-svg-icons": "^5.12.0",
+    "@ngrx/effects": "^8.6.0",
     "@ngrx/store": "8.6.0",
     "add": "^2.0.6",
     "apollo-angular": "^1.8.0",
     "apollo-angular-link-http": "^1.9.0",
-    "apollo-cache-inmemory": "^1.5.1",
-    "apollo-client": "^2.5.1",
-    "core-js": "^2.6.5",
-    "date-fns": "^2.0.0-alpha.27",
-    "graphql": "^14.1.1",
+    "apollo-cache-inmemory": "^1.6.5",
+    "apollo-client": "^2.6.8",
+    "core-js": "^3.6.4",
+    "date-fns": "^2.9.0",
+    "graphql": "^14.5.8",
     "graphql-tag": "^2.10.1",
-    "ngx-infinite-scroll": "^7.0.1",
+    "ngx-infinite-scroll": "^8.0.1",
     "rxjs": "6.5.4",
     "text-overflow-clamp": "^1.0.0",
-    "yarn": "^1.13.0",
-    "zone.js": "~0.9.1"
+    "yarn": "^1.21.1",
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.803.22",
     "@angular/cli": "8.3.22",
-    "@angular/compiler-cli": "^7.2.7",
-    "@angular/language-service": "7.1.4",
-    "@types/graphql": "^0.13.4",
-    "@types/jasmine": "^2.8.16",
-    "@types/node": "^10.12.29",
-    "jasmine-core": "~2.8.0",
+    "@angular/compiler-cli": "^8.2.14",
+    "@angular/language-service": "8.2.14",
+    "@types/graphql": "^14.5.0",
+    "@types/jasmine": "^3.5.0",
+    "@types/node": "^13.1.6",
+    "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^4.0.1",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "^1.4.3",
-    "karma-jasmine": "^1.1.2",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "prettier": "^1.16.4",
+    "karma": "^4.4.1",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "^2.1.1",
+    "karma-jasmine": "^3.1.0",
+    "karma-jasmine-html-reporter": "^1.5.1",
+    "prettier": "^1.19.1",
     "typescript": "3.5.3"
   }
 }
