replace karma with jest

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -4,6 +4,7 @@
     "incremental": true,
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
+    "allowJs": true,
     "declaration": false,
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
