--- a/client/package.json
+++ b/client/package.json
@@ -6,10 +6,21 @@
     "ng": "ng",
     "start": "ng serve --host 0.0.0.0 --proxy-config proxy.config.js --port 5200",
     "build": "ng build --prod",
-    "test": "ng test",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:ci": "jest --runInBand",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "prettier": "prettier src/**/*.ts --write"
+  },
+  "jest": {
+    "preset": "jest-preset-angular",
+    "testMatch": [
+      "**/*.spec.ts"
+    ],
+    "setupFilesAfterEnv": [
+      "<rootDir>/src/test.ts"
+    ]
   },
   "private": true,
   "dependencies": {
@@ -31,7 +42,6 @@
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
     "@ngrx/effects": "^8.6.0",
     "@ngrx/store": "8.6.0",
-    "add": "^2.0.6",
     "apollo-angular": "^1.8.0",
     "apollo-angular-link-http": "^1.9.0",
     "apollo-cache-inmemory": "^1.6.5",
@@ -43,7 +53,6 @@
     "ngx-infinite-scroll": "^8.0.1",
     "rxjs": "6.5.4",
     "text-overflow-clamp": "^1.0.0",
-    "yarn": "^1.21.1",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
@@ -53,16 +62,11 @@
     "@angular/language-service": "8.2.14",
     "@types/graphql": "^14.5.0",
     "@types/jasmine": "^3.5.0",
+    "@types/jest": "^24.9.0",
     "@types/node": "^13.1.6",
-    "jasmine-core": "~3.5.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^4.4.1",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "^2.1.1",
-    "karma-jasmine": "^3.1.0",
-    "karma-jasmine-html-reporter": "^1.5.1",
+    "jest": "^24.9.0",
+    "jest-preset-angular": "^8.0.0",
     "prettier": "^1.19.1",
-    "puppeteer": "^2.0.0",
     "typescript": "3.5.3"
   }
 }
