--- a/client/tsconfig.spec.json
+++ b/client/tsconfig.spec.json
@@ -1,7 +1,7 @@
 {
-  "extends": "../tsconfig.json",
+  "extends": "./tsconfig.json",
   "compilerOptions": {
-    "outDir": "../out-tsc/spec",
+    "outDir": "./out-tsc/spec",
     "baseUrl": "./",
     "module": "commonjs",
     "types": [
@@ -9,10 +9,6 @@
       "node"
     ]
   },
-  "files": [
-    "test.ts",
-    "polyfills.ts"
-  ],
   "include": [
     "**/*.spec.ts",
     "**/*.d.ts"
