--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@types/moment": "^2.13.0",
     "apollo-server-express": "^2.3.1",
+    "axios": "^0.19.2",
     "babel-polyfill": "^6.26.0",
     "bcryptjs": "^2.4.3",
     "bloom-redis": "0.0.1",
