--- a/client/package.json
+++ b/client/package.json
@@ -37,33 +37,34 @@
     "@angular/router": "8.2.14",
     "@angular/service-worker": "8.2.14",
     "@fortawesome/angular-fontawesome": "^0.5.0",
-    "@fortawesome/fontawesome-svg-core": "^1.2.26",
-    "@fortawesome/free-regular-svg-icons": "^5.12.0",
-    "@fortawesome/free-solid-svg-icons": "^5.12.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.27",
+    "@fortawesome/free-regular-svg-icons": "^5.12.1",
+    "@fortawesome/free-solid-svg-icons": "^5.12.1",
     "@ngrx/effects": "^8.6.0",
     "@ngrx/store": "8.6.0",
+    "@sentry/browser": "^5.12.4",
     "apollo-angular": "^1.8.0",
     "apollo-angular-link-http": "^1.9.0",
     "apollo-cache-inmemory": "^1.6.5",
     "apollo-client": "^2.6.8",
     "core-js": "^3.6.4",
     "date-fns": "^2.9.0",
-    "graphql": "^14.5.8",
-    "graphql-tag": "^2.10.1",
+    "graphql": "^14.6.0",
+    "graphql-tag": "^2.10.3",
     "ngx-infinite-scroll": "^8.0.1",
     "rxjs": "6.5.4",
     "text-overflow-clamp": "^1.0.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.803.22",
+    "@angular-devkit/build-angular": "^0.803.25",
     "@angular/cli": "8.3.22",
     "@angular/compiler-cli": "^8.2.14",
     "@angular/language-service": "8.2.14",
     "@types/graphql": "^14.5.0",
-    "@types/jasmine": "^3.5.0",
-    "@types/jest": "^24.9.0",
-    "@types/node": "^13.1.6",
+    "@types/jasmine": "^3.5.7",
+    "@types/jest": "^24.9.1",
+    "@types/node": "^13.7.4",
     "jest": "^24.9.0",
     "jest-preset-angular": "^8.0.0",
     "prettier": "^1.19.1",
