--- a/config/config.yaml
+++ b/config/config.yaml
@@ -10,6 +10,6 @@ REDIS_PORT: 6379
 POSTGRES_HOST: "localhost"
 POSTGRES_USERNAME: "postgres"
 POSTGRES_PASSWORD: "mysecretpassword"
-POSTGRES_DB: "postgres"
+POSTGRES_DB: "oyster"
 
 VAPID_DETAIL_EMAIL: 'me@oyster'
