--- a/server/package.json
+++ b/server/package.json
@@ -34,6 +34,7 @@
     "moment-timezone": "^0.5.16",
     "morgan": "^1.9.0",
     "pg": "^7.7.1",
+    "psl": "^1.7.0",
     "ramda": "^0.25.0",
     "redis": "^2.8.0",
     "reflect-metadata": "^0.1.12",
@@ -41,6 +42,7 @@
     "typeorm": "^0.2.21",
     "web-push": "^3.3.0",
     "winston": "^3.2.1",
+    "winston-daily-rotate-file": "^4.4.2",
     "xml2js": "^0.4.22"
   },
   "devDependencies": {
