--- a/config/config.yaml
+++ b/config/config.yaml
@@ -23,6 +23,8 @@ VAPID_DETAIL_EMAIL: "me@oyster"
 # elasticsearch_auth_password: 'oyster_pw'
 
 # elastic apm
+# [docs]: https://www.elastic.co/guide/en/apm/agent/nodejs/current/configuration.html#configuration
 # apm_service_name: 'oyster_dev'
 # apm_secret_token: '**********'
 # apm_server_url: 'http:/localhost:8200'
+# apm_server_environment: 'development'
