--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,6 +1,5 @@
 SECRET_KEY: oyster # !IMPORTANT please replace this key
 JWT_EXP: 2592000 # 30d
-FEED_FILE_PATH: "config/feeds.yml"
 
 # redis
 REDIS_HOST: "localhost"
@@ -26,5 +25,5 @@ VAPID_DETAIL_EMAIL: "me@oyster"
 # [docs]: https://www.elastic.co/guide/en/apm/agent/nodejs/current/configuration.html#configuration
 # apm_service_name: 'oyster_dev'
 # apm_secret_token: '**********'
-# apm_server_url: 'http:/localhost:8200'
+# apm_server_url: 'http://localhost:8200'
 # apm_server_environment: 'development'
