add default orm_logging configure

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -10,6 +10,7 @@ POSTGRES_HOST: "localhost"
 POSTGRES_USERNAME: "postgres"
 POSTGRES_PASSWORD: "mysecretpassword"
 POSTGRES_DB: "oyster"
+orm_logging: false
 
 VAPID_DETAIL_EMAIL: "me@oyster"
 # set proxy url
