--- a/server/package.json
+++ b/server/package.json
@@ -34,6 +34,7 @@
     "moment": "^2.22.1",
     "moment-timezone": "^0.5.16",
     "morgan": "^1.9.0",
+    "node-cron": "^2.0.3",
     "pg": "^7.7.1",
     "psl": "^1.7.0",
     "ramda": "^0.25.0",
