--- a/client/package.json
+++ b/client/package.json
@@ -56,7 +56,7 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1000.0",
+    "@angular-devkit/build-angular": "0.803.28",
     "@angular/cli": "8.3.22",
     "@angular/compiler-cli": "^8.2.14",
     "@angular/language-service": "8.2.14",
