--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/moment": "^2.13.0",
-    "apollo-server-express": "^2.15.0",
+    "apollo-server-express": "^2.19.2",
     "axios": "^0.21.1",
     "babel-polyfill": "^6.26.0",
     "bcryptjs": "^2.4.3",
@@ -25,6 +25,7 @@
     "express-useragent": "^1.0.12",
     "graphql": "^0.13.2",
     "graphql-tools": "^2.23.1",
+    "html-to-text": "^6.0.0",
     "isomorphic-fetch": "^2.2.1",
     "js-yaml": "^3.13.1",
     "jsonwebtoken": "^8.2.1",
